src/objects/FieloAlpha__News__c.object
<CustomObject>
    <customHelpPage>FieloAlpha__NewsHelpBackEnd</customHelpPage>
    <description>Content that is shown in the members’ portal by using a “Content feed” component. Its main use is for publishing news.</description>
    <fields>
        <fullName>FieloAlpha__AttachmentId__c</fullName>
        <description>ID of an image file that can be added to this content feed.</description>
        <label>Image source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Body__c</fullName>
        <description>Content of the news</description>
        <inlineHelpText>Enter text or images for your content feed.</inlineHelpText>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__CategoryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Item</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>That category belongs to another program. You must create the category in this program before trying to use it.</errorMessage>
            <filterItems>
                <field>$Source.FieloAlpha__Program__c</field>
                <operation>equals</operation>
                <valueField>FieloAlpha__Category__c.FieloAlpha__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloAlpha__Category__c</referenceTo>
        <relationshipLabel>Content feeds</relationshipLabel>
        <relationshipName>Content_feeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The component through which this content feed will be showed.</description>
        <inlineHelpText>Enter the component that will show this content feed.</inlineHelpText>
        <label>Component</label>
        <referenceTo>FieloAlpha__Component__c</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExternalLink__c</fullName>
        <description>The URL to which this content feed will redirect when clicked.</description>
        <inlineHelpText>Set the URL to which this content feed will redirect.</inlineHelpText>
        <label>External Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExternalName__c</fullName>
        <label>External Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__ExtractText__c</fullName>
        <description>A short description of the content feed.</description>
        <inlineHelpText>Enter a short description for this content feed.</inlineHelpText>
        <label>Extract Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Segments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Image__c</fullName>
        <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloAlpha__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
        <inlineHelpText>Enter the ID of the image file to be added to this content feed.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this content feed active and it will show in the members&apos; portal.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Order__c</fullName>
        <description>The relative position of this content feed.</description>
        <inlineHelpText>Set the position for this content feed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the program to which the content feed belongs</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloAlpha__Program__c</referenceTo>
        <relationshipLabel>Content feeds</relationshipLabel>
        <relationshipName>ContentFeeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__PublishDate__c</fullName>
        <description>The date from which this content feed will show in the members&apos; portal.</description>
        <inlineHelpText>Set the starting day for showing this content feed.</inlineHelpText>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityComments__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number cf comments for this content feed.</description>
        <inlineHelpText>Enter a title that will appear on top of this content feed.</inlineHelpText>
        <label>QuantityComments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__QuantityLikes__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of comments of this content feed.</inlineHelpText>
        <label>Quantity Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Profiling</label>
        <referenceTo>FieloAlpha__RedemptionRule__c</referenceTo>
        <relationshipName>News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Title__c</fullName>
        <description>The title that will show on top of this content feed.</description>
        <inlineHelpText>Enter the title for this content feed.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloAlpha__Type__c</fullName>
        <description>The type to which this content feed belongs.</description>
        <inlineHelpText>Set the type of this content feed.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Content feed</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__All</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Title__c</columns>
        <columns>FieloAlpha__Type__c</columns>
        <columns>FieloAlpha__PublishDate__c</columns>
        <columns>FieloAlpha__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloAlpha__All_Content_feeds</fullName>
        <columns>NAME</columns>
        <columns>FieloAlpha__Title__c</columns>
        <columns>FieloAlpha__Component__c</columns>
        <columns>FieloAlpha__Type__c</columns>
        <columns>FieloAlpha__PublishDate__c</columns>
        <columns>FieloAlpha__IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Content feeds</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloAlpha__ModifyProgram</fullName>
        <active>true</active>
        <description>Is not possible to modify the associated Program</description>
        <errorConditionFormula>ISCHANGED(FieloAlpha__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloAlpha__Program__c)))</errorConditionFormula>
        <errorDisplayField>FieloAlpha__Program__c</errorDisplayField>
        <errorMessage>Is not possible to modify the associated Program</errorMessage>
    </validationRules>
</CustomObject>